<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="Activities.CourseDetail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/dCourseNameID"
                android:text="@string/course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/dCourseNameValueID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:background="@drawable/border"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/dCourseStartDateID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_start"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/dCourseStartDateValueID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="10dp"
                android:background="@drawable/border"/>
            <TextView
                android:id="@+id/dCourseEndDateID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_end"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/dCourseEndDateValueID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="10dp"
                android:background="@drawable/border"/>
            <EditText
                android:id="@+id/dCourseSemester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:padding="10dp" />
            <EditText
                android:id="@+id/dCourseStatus"
                android:layout_width="match_parent"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="10dp" />
            <Spinner
                android:id="@+id/dcourse_status_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:entries="@array/course_status_arrays"
                android:prompt="@string/course_prompt" />
            <Spinner
                android:id="@+id/dcourse_term_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:prompt="@string/termPrompt" />
            <Button
                android:id="@+id/addAssessmentInfoButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_assesment"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/addTeacherInfoButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_teacher"/>
            <Button
                android:id="@+id/addNoteButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_Note"
                android:layout_gravity="center"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <Button
                    android:layout_margin="10dp"
                    android:id="@+id/aeditButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/edit"/>
                <Button
                    android:layout_margin="10dp"
                    android:id="@+id/deleteButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/cancelCourseDetailButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"/>
                <Button
                    android:id="@+id/saveCourseDetailButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_button"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>