<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="Activities.AddTermActivity">
    <TextView
        android:id="@+id/TermNameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_name"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/TermNameValueID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Term Name"
        android:padding="10dp"
        android:background="@drawable/border"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/TermStartDateID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_start"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/TermStartDateValueID"
        style="@style/Base.Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/TermEndDateID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_end"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/TermEndDateValueID"
        style="@style/Base.Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/TermSaveButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>
        <Button
            android:id="@+id/TermCancelButtonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"/>
    </LinearLayout>
</LinearLayout>