<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="Activities.TermDetail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/DTermNameID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_name"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/DTermNameValueID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:background="@drawable/border"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/DTermStartDateID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_start"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/DTermStartDateValueID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="10dp"
                android:background="@drawable/border"
                android:textSize="16sp"  />
            <TextView
                android:id="@+id/DTermEndDateID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/term_end"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/DTermEndDateValueID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="10dp"
                android:background="@drawable/border"
                android:textSize="16sp" />
            <Button
                android:id="@+id/listOFCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/listOfCoursesForTerms"/>
            <Button
                android:id="@+id/termDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:text="@string/delete"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


