<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="Activities.AssessmentDetail">
    <TextView
        android:id="@+id/dTitleID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title"
        android:layout_margin="5dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/dTitleIDText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/border"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/dDescID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/dDescIDText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/border"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/dDateID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Estimated Completion Date"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/dDateIDText"
        style="@style/Base.Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/dCategoryID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Category"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/dCategoryIDText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/border"
        android:textColor="@color/black"
        />
    <Spinner
        android:id="@+id/dassessment_category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:entries="@array/category_arrays" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/saveButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            />
        <Button
            android:id="@+id/cancelButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            />
        <Button
            android:id="@+id/editButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            />
        <Button
            android:id="@+id/deleteButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"/>
    </LinearLayout>
</LinearLayout>