<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Activities.TeacherDetail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/teacherName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/border"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/teacher_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/teacherPhoneNumber"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/border"
                android:layout_gravity="center"/>
            <TextView
                android:text="@string/teacher_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/teacherEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/border"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>